[gd_scene load_steps=54 format=3 uid="uid://bpvplm1nhelkn"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_gyuep"]
[ext_resource type="Texture2D" uid="uid://ovsohu8qv302" path="res://Player/player_sheet.png" id="2_jlb6k"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6klgb"]
atlas = ExtResource("2_jlb6k")
region = Rect2(0, 1428, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_re312"]
atlas = ExtResource("2_jlb6k")
region = Rect2(96, 1428, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyn7x"]
atlas = ExtResource("2_jlb6k")
region = Rect2(192, 1428, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tjhl"]
atlas = ExtResource("2_jlb6k")
region = Rect2(288, 1428, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_01sny"]
atlas = ExtResource("2_jlb6k")
region = Rect2(384, 1428, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_myexp"]
atlas = ExtResource("2_jlb6k")
region = Rect2(480, 1428, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_8que0"]
atlas = ExtResource("2_jlb6k")
region = Rect2(576, 1428, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewtbb"]
atlas = ExtResource("2_jlb6k")
region = Rect2(672, 1428, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_1c6r6"]
atlas = ExtResource("2_jlb6k")
region = Rect2(0, 1092, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_avttj"]
atlas = ExtResource("2_jlb6k")
region = Rect2(96, 1092, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqmbj"]
atlas = ExtResource("2_jlb6k")
region = Rect2(192, 1092, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2pu7"]
atlas = ExtResource("2_jlb6k")
region = Rect2(288, 1092, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_0w55y"]
atlas = ExtResource("2_jlb6k")
region = Rect2(0, 84, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8u7n"]
atlas = ExtResource("2_jlb6k")
region = Rect2(96, 84, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rpry"]
atlas = ExtResource("2_jlb6k")
region = Rect2(192, 84, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_35wak"]
atlas = ExtResource("2_jlb6k")
region = Rect2(288, 84, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0yoc"]
atlas = ExtResource("2_jlb6k")
region = Rect2(384, 84, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2pyt"]
atlas = ExtResource("2_jlb6k")
region = Rect2(480, 84, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wjqr"]
atlas = ExtResource("2_jlb6k")
region = Rect2(0, 588, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_08dhj"]
atlas = ExtResource("2_jlb6k")
region = Rect2(0, 504, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqyjl"]
atlas = ExtResource("2_jlb6k")
region = Rect2(384, 1344, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjvey"]
atlas = ExtResource("2_jlb6k")
region = Rect2(0, 1260, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_r62ko"]
atlas = ExtResource("2_jlb6k")
region = Rect2(96, 1260, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_xd7so"]
atlas = ExtResource("2_jlb6k")
region = Rect2(192, 1260, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_clqaw"]
atlas = ExtResource("2_jlb6k")
region = Rect2(288, 1260, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_6p4fk"]
atlas = ExtResource("2_jlb6k")
region = Rect2(384, 1260, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0e3u"]
atlas = ExtResource("2_jlb6k")
region = Rect2(480, 1260, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5by8"]
atlas = ExtResource("2_jlb6k")
region = Rect2(0, 1008, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_e720f"]
atlas = ExtResource("2_jlb6k")
region = Rect2(96, 1008, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vxyt"]
atlas = ExtResource("2_jlb6k")
region = Rect2(192, 1008, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jaig"]
atlas = ExtResource("2_jlb6k")
region = Rect2(288, 1008, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2fke"]
atlas = ExtResource("2_jlb6k")
region = Rect2(384, 1008, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihemu"]
atlas = ExtResource("2_jlb6k")
region = Rect2(480, 1008, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjrdv"]
atlas = ExtResource("2_jlb6k")
region = Rect2(576, 1008, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkjoy"]
atlas = ExtResource("2_jlb6k")
region = Rect2(672, 1008, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_euqof"]
atlas = ExtResource("2_jlb6k")
region = Rect2(768, 1008, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yop3"]
atlas = ExtResource("2_jlb6k")
region = Rect2(864, 1008, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_wy847"]
atlas = ExtResource("2_jlb6k")
region = Rect2(0, 252, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_4llso"]
atlas = ExtResource("2_jlb6k")
region = Rect2(96, 252, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4i0x"]
atlas = ExtResource("2_jlb6k")
region = Rect2(192, 252, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_eymus"]
atlas = ExtResource("2_jlb6k")
region = Rect2(288, 252, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j8wo"]
atlas = ExtResource("2_jlb6k")
region = Rect2(384, 252, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfk0e"]
atlas = ExtResource("2_jlb6k")
region = Rect2(480, 252, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_eeceq"]
atlas = ExtResource("2_jlb6k")
region = Rect2(576, 252, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_5q5k1"]
atlas = ExtResource("2_jlb6k")
region = Rect2(672, 252, 96, 84)

[sub_resource type="SpriteFrames" id="SpriteFrames_ijkyo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6klgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_re312")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyn7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tjhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01sny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myexp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8que0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewtbb")
}],
"loop": false,
"name": &"Climb_Up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1c6r6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avttj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqmbj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2pu7")
}],
"loop": true,
"name": &"Dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0w55y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8u7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rpry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35wak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0yoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2pyt")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wjqr")
}],
"loop": true,
"name": &"Jump_Down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_08dhj")
}],
"loop": true,
"name": &"Jump_Up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqyjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjvey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r62ko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xd7so")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clqaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6p4fk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0e3u")
}],
"loop": true,
"name": &"Ledge_Grab",
"speed": 5.0
}, {
"frames": [{
"duration": 0.2,
"texture": SubResource("AtlasTexture_i5by8")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_e720f")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_5vxyt")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_7jaig")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_w2fke")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_ihemu")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_qjrdv")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_lkjoy")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_euqof")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_1yop3")
}],
"loop": true,
"name": &"Roll",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wy847")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4llso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4i0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eymus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j8wo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfk0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eeceq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5q5k1")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gmp52"]
radius = 7.45
height = 64.0

[sub_resource type="SegmentShape2D" id="SegmentShape2D_r0djb"]
a = Vector2(0, -11)
b = Vector2(0, -32)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_olvob"]
a = Vector2(-12, -37)
b = Vector2(12, -37)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_g8f5i"]
a = Vector2(-12, -32)
b = Vector2(12, -32)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fvjle"]
radius = 7.45

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_gyuep")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -37)
scale = Vector2(1.64286, 1.64286)
sprite_frames = SubResource("SpriteFrames_ijkyo")
animation = &"Roll"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_gmp52")

[node name="Camera2D" type="Camera2D" parent="CollisionShape2D"]
zoom = Vector2(1.3, 1.3)
position_smoothing_enabled = true

[node name="RollSensor" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RollSensor"]
shape = SubResource("SegmentShape2D_r0djb")

[node name="GrabSensorOff" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabSensorOff"]
shape = SubResource("SegmentShape2D_olvob")

[node name="GrabSensorOn" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabSensorOn"]
shape = SubResource("SegmentShape2D_g8f5i")

[node name="RollCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 17)
shape = SubResource("CapsuleShape2D_fvjle")
